= Changelog

== 0.6.0 - unreleased

:262: https://github.com/stackabletech/agent/pull/262[#262]
:267: https://github.com/stackabletech/agent/pull/267[#267]
:270: https://github.com/stackabletech/agent/pull/270[#270]
:273: https://github.com/stackabletech/agent/pull/273[#273]

=== Added
* Prints self-diagnostic information on startup ({270})
* Check added on startup if the configured directories exist and are
  writable by the Stackable agent ({273}).

=== Changed
* Lazy validation of repository URLs changed to eager validation
  ({262}).
* `certificates.k8s.io/v1` used instead of `certificates.k8s.io/v1beta1`
  so that the Stackable Agent is now compatible with Kubernetes v1.22
  but not any longer with versions prior to v1.19 ({267}).

== 0.5.0 - 2021-07-26

:224: https://github.com/stackabletech/agent/pull/224[#224]
:229: https://github.com/stackabletech/agent/pull/229[#229]
:234: https://github.com/stackabletech/agent/pull/234[#234]
:235: https://github.com/stackabletech/agent/pull/235[#235]

=== Added
* `hostIP` and `podIP` added to the pod status ({224}).
* Environment variable `KUBECONFIG` set in systemd services ({234}).

=== Fixed
* Invalid or unreachable repositories are skipped when searching for
  packages ({229}).
* Access rights of the private key file restricted to the owner ({235}).
  The permissions are set when the file is created. On existing
  installations the permissions must be set manually, e.g. with
  `chmod 600 /etc/stackable/stackable-agent/secret/agent.key`.

== 0.4.0 - 2021-06-23

:188: https://github.com/stackabletech/agent/pull/188[#188]
:205: https://github.com/stackabletech/agent/pull/205[#205]

=== Added
* Annotation `featureLogs` added to the pods to indicate if logs can be
  retrieved with `kubectl logs` ({188}).

=== Changed
* Restart setting in systemd units removed because the agent already
  monitors the units and restarts them according to the restart policy
  in the pod spec ({205}).

=== Fixed